tests/errors/semantic/E005_bad_export.zy
# E005_bad_export {
    #> { real_fn, ghost_fn }

    real_fn() { <~ 42 }
}
